src/objects/CI_AccountModelConfig__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Protected</customSettingsVisibility>
    <fields>
        <fullName>Account_Weight__c</fullName>
        <defaultValue>1</defaultValue>
        <description>Weight to apply to responses on account contacts</description>
        <inlineHelpText>Default weight to apply to every response on an Account contact</inlineHelpText>
        <label>Account Weight</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Additional_Instances__c</fullName>
        <label>Additional Instances</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Attribution_For_Account_Contacts_Only__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Attribution For Account Contacts Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CloseDateCutoff__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When true, do not include any responses after the close date even if the opportunity is open</description>
        <label>Close Date Cut-off</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Currency_Field_Name__c</fullName>
        <label>Currency Field Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DateFilter__c</fullName>
        <defaultValue>&quot;open&quot;</defaultValue>
        <description>Filters responses to consider - DaysFromClose applies to the opportunity closed or created date, or no filter. Values are &apos;close&apos;, &apos;open&apos;, &apos;none&apos;</description>
        <label>DateFilter</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True when influence model is enabled</description>
        <inlineHelpText>Enable or disable the influence model</inlineHelpText>
        <label>Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Include_Zero_Amount_Influence__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Include zero amount opportunity influence in the influence detail capture</description>
        <inlineHelpText>Include zero amount opportunity influence in the influence detail capture</inlineHelpText>
        <label>Include Zero Amount Influence</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lead_Account_Lookup_Field__c</fullName>
        <label>Lead Account Lookup Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Response_Weight__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Default weight applied to every lead tied to the account based on the Lead&apos;s Account Field</inlineHelpText>
        <label>Lead Response Weight</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Search_Days__c</fullName>
        <description>Number of days before opportunity create date to search for responses. Null for no filter.</description>
        <inlineHelpText>Number of days before opportunity create date to search for responses</inlineHelpText>
        <label>Search Days</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Account Model Setting</label>
</CustomObject>